--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -1101,17 +1101,17 @@ jobs:
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows-sql.yaml
     vars:
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc.wf.json"
-      gcs_url: ((.:gcs_url))
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
       sql_server_media: ((.:sql-server-media))
       source_image_project: "bct-prod-images"
       ssms_exe: ((.:windows_gcs_ssms_exe))
       timeout: "4h"
-# windows-2019-core-for-containers
+# Windows windows 2019 core for containers
 - name: build-windows-2019-core-for-containers
   plan:
   - get: compute-image-tools
-    passed: [publish-to-testing-windows-2019-core]
+    passed: [publish-to-testing-2019-core]
     trigger: true
   - get: guest-test-infra
   - task: get-credential
@@ -1123,7 +1123,7 @@ jobs:
   - put: windows-2019-core-for-containers-gcs
     params:
       file: build-id-dir/windows-2019-core-for-containers-v*
-  - load_var: gcs_url
+  - load_var: gcs-url
     file: windows-2019-core-for-containers-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
@@ -1132,14 +1132,14 @@ jobs:
   - task: daisy-build-windows-2019-core-for-containers
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
     vars:
-      wf: "windows_container/windows-2019-core-for-containers.wf.json"
-      gcs_url: ((.:gcs_url))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
-# windows-2019-for-containers
+# Windows windows 2019 for containers
 - name: build-windows-2019-for-containers
   plan:
   - get: compute-image-tools
-    passed: [publish-to-testing-windows-2019]
+    passed: [publish-to-testing-2019]
     trigger: true
   - get: guest-test-infra
   - task: get-credential
@@ -1151,7 +1151,7 @@ jobs:
   - put: windows-2019-for-containers-gcs
     params:
       file: build-id-dir/windows-2019-for-containers-v*
-  - load_var: gcs_url
+  - load_var: gcs-url
     file: windows-2019-for-containers-gcs/url
   - task: generate-build-date
     file: guest-test-infra/concourse/tasks/generate-version.yaml
@@ -1160,8 +1160,8 @@ jobs:
   - task: daisy-build-windows-2019-for-containers
     file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
     vars:
-      wf: "windows_container/windows-2019-for-containers.wf.json"
-      gcs_url: ((.:gcs_url))
+      wf: "windows_container/windows-2019-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs-url))
       build_date: ((.:build-date))
 
 # Publish to testing
@@ -1609,8 +1609,8 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc-uefi.publish"
       environment: "test"
-# windows-2019-core-for-containers
-- name: publish-to-testing-windows-2019-core-for-containers
+# Windows 2019 core for containers
+- name: publish-to-testing-2019-core-for-containers
   plan:
   - get: guest-test-infra
     passed: [build-windows-2019-core-for-containers]
@@ -1625,16 +1625,16 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-core-for-containers
+  - task: publish-2019-core-for-containers
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
       source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-core-for-containers.publish.json"
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
       environment: "test"
-# windows-2019-for-containers
-- name: publish-to-testing-windows-2019-for-containers
+# Windows 2019 for containers
+- name: publish-to-testing-2019-for-containers
   plan:
   - get: guest-test-infra
     passed: [build-windows-2019-for-containers]
@@ -1649,13 +1649,13 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-for-containers
+  - task: publish-2019-for-containers
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
       source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-for-containers.publish.json"
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
       environment: "test"
 
 # Publish to staging
@@ -2103,11 +2103,11 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2012-enterprise-windows-2012-r2-dc-uefi.publish"
       environment: "staging"
-# windows-2019-core-for-containers
-- name: publish-to-staging-windows-2019-core-for-containers
+# Windows 2019 core for containers
+- name: publish-to-staging-2019-core-for-containers
   plan:
   - get: guest-test-infra
-    passed: [publish-to-testing-windows-2019-core-for-containers]
+    passed: [publish-to-testing-2019-core-for-containers]
     trigger: false
   - get: compute-image-tools
   - task: get-credential
@@ -2119,19 +2119,19 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-core-for-containers
+  - task: publish-2019-core-for-containers
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
       source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-core-for-containers.publish.json"
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
       environment: "staging"
-# windows-2019-for-containers
-- name: publish-to-staging-windows-2019-for-containers
+# Windows 2019 for containers
+- name: publish-to-staging-2019-for-containers
   plan:
   - get: guest-test-infra
-    passed: [publish-to-testing-windows-2019-for-containers]
+    passed: [publish-to-testing-2019-for-containers]
     trigger: false
   - get: compute-image-tools
   - task: get-credential
@@ -2143,13 +2143,13 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-for-containers
+  - task: publish-2019-for-containers
     file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
     vars:
       source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-for-containers.publish.json"
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
       environment: "staging"
 
 # Publish to prod
@@ -2619,13 +2619,13 @@ jobs:
       image_name: "sql-2012-enterprise-windows-2012-r2-dc"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
-# windows-2019-core-for-containers
+# Windows 2019 core for containers
 - name: publish-to-prod-windows-2019-core-for-containers
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
   - get: windows-2019-core-for-containers-gcs
-    passed: [publish-to-staging-windows-2019-core-for-containers]
+    passed: [publish-to-staging-2019-core-for-containers]
     trigger: false
   - load_var: source-version
     file: windows-2019-core-for-containers-gcs/version
@@ -2635,23 +2635,23 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-core-for-containers
+  - task: publish-2019-core-for-containers
     file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
     vars:
       gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-core-for-containers.publish.json"
-      image_name: "windows-2019-core-for-containers"
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      image_name: "2019-core-for-containers"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
-# windows-2019-for-containers
+# Windows 2019 for containers
 - name: publish-to-prod-windows-2019-for-containers
   plan:
   - get: guest-test-infra
   - get: compute-image-tools
   - get: windows-2019-for-containers-gcs
-    passed: [publish-to-staging-windows-2019-for-containers]
+    passed: [publish-to-staging-2019-for-containers]
     trigger: false
   - load_var: source-version
     file: windows-2019-for-containers-gcs/version
@@ -2661,13 +2661,13 @@ jobs:
     file: guest-test-infra/concourse/tasks/generate-version.yaml
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
-  - task: publish-windows-2019-for-containers
+  - task: publish-2019-for-containers
     file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
     vars:
       gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
-      wf: "windows_container/windows-2019-for-containers.publish.json"
-      image_name: "windows-2019-for-containers"
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
+      image_name: "2019-for-containers"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
