--- a/concourse/tasks/daisy-build-images-windows-sql.yaml
+++ b/concourse/tasks/daisy-build-images-windows-sql.yaml
@@ -21,9 +21,9 @@ run:
   - -zone=us-central1-c
   - -var:build_date=((build_date))
   - -var:gcs_url=((gcs_url))
-  - -var:sql_server_media:((sql_server_media))
-  - -var:source_image_project:((source_image_project))
-  - -var:ssms_exe:((ssms_exe))
-  - -var:timeout:((timeout))
+  - -var:sql_server_media=((sql_server_media))
+  - -var:source_image_project=((source_image_project))
+  - -var:ssms_exe=((ssms_exe))
+  - -var:timeout=((timeout))
   - -compute_endpoint_override=https://www.googleapis.com/compute/beta/projects/
   - ./compute-image-tools/daisy_workflows/build-publish/((wf))
